<resources>
    <string name="app_name" translatable="false">TIMS_Project</string>
    <string name="email_address">Email Address</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="logout">logout</string>
    <string name="button">button</string>
    <string name="owner_section">Owner Section</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="email_not_verified">Email Not Verified !</string>
    <string name="verify_now">Verify Now</string>
    <string name="tenant_section">Tenant Section</string>
    <string name="chat_with_tenant">Chat with Tenant</string>
    <string name="upload_notice">Upload Notice</string>
    <string name="payment_report">payment Report</string>
    <string name="delete_notice">Delete Notice</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="remove_tenant">Remove Tenant</string>
    <string name="msg_token_fmt" translatable="false">%s</string>
    <string name="chat_with_owner">  Chat with Owner </string>
    <string name="view_notice_board">Notice Board</string>
    <string name="pay_rent">     Pay Rent     </string>
    <string name="send_request">   Send Request  </string>
    <string name="upload_a_pdf">Upload A Pdf</string>
    <string name="enter_pdf_file_name">Enter PDF File Name:</string>
    <string name="upload">Upload</string>
    <string name="a_sample_message">A sample message</string>
    <string name="_9_00_pm">9:00 PM</string>
    <string name="seen">Seen</string>
    <string name="personname">PersonName</string>
    <string name="email">email</string>
    <string name="nid_card">NID Card</string>
    <string name="bkash">bKash</string>
    <string name="nagad">Nagad</string>
    <string name="rocket">Rocket</string>


</resources>