<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="#ffffff"
    app:cardElevation="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/RnameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personname"
                android:textSize="18sp"
                android:textColor="#0C0C0C"
                ></TextView>
            <TextView
                android:id="@+id/RemailTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#0C0C0C"
                ></TextView>
            <Button
                android:id="@+id/RsentBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/remove_tenant"
                android:textColor="#FFFFFF"
                ></Button>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>